--- a/README
+++ b/README
@@ -66,6 +66,11 @@ Description
     support the Drizzle or MySQL wired protocol. Also it can serve as a
     direct REST interface to those RDBMS backends.
 
+    This module does not generate human-readable outputs, rather, in a
+    binary format called Resty-DBD-Stream (RDS) designed by ourselves. You
+    usually need other components to work with this module. See Output
+    Format for details.
+
   Keepalive connection pool
     This module also provides a builtin per-worker connection pool mechanism
     for MySQL or Drizzle TCP connections.
@@ -392,8 +397,15 @@ Output Format
     (<http://github.com/FRiCKLE/ngx_postgres/>). This data format is named
     "Resty DBD Stream" (RDS).
 
-    If you're a web app developer, you may be more interested in using a
-    source filter module like [[HttpRdsJsonModule]] to obtain JSON output.
+    If you're a web app developer, you may be more interested in
+
+    *   using [[HttpRdsJsonModule]] to obtain JSON output,
+
+    *   using [[HttpRdsCsvModule]] to obain Comma-Separated-Value (CSV)
+        output,
+
+    *   or using [[LuaRdsParser]] to parse the RDS data into Lua data
+        structures.
 
     For the HTTP response header part, the "200 OK" status code should
     always be returned. The "Content-Type" header *must* be set to
@@ -539,7 +551,7 @@ Installation
         example, the version 1.0.5 (see nginx compatibility), and then build
         the source with this module:
 
-            wget 'http://sysoev.ru/nginx/nginx-1.0.5.tar.gz'
+            wget 'http://nginx.org/download/nginx-1.0.5.tar.gz'
             tar -xzvf nginx-1.0.5.tar.gz
             cd nginx-1.0.4/
 
@@ -693,6 +705,10 @@ Copyright & License
 
 See Also
     *   [[HttpRdsJsonModule]]
+
+    *   [[HttpRdsCsvModule]]
+
+    *   [[LuaRdsParser]]
 
     *   The ngx_openresty bundle (<http://openresty.org>)
 
