--- a/doc/HttpDrizzleModule.wiki
+++ b/doc/HttpDrizzleModule.wiki
@@ -10,7 +10,7 @@ This module is already production ready and is powering [http://lz.taobao.com th
 
 = Version =
 
-This document describes drizzle-nginx-module [https://github.com/chaoslawful/drizzle-nginx-module/downloads v0.1.1rc4] released on 23 August 2011.
+This document describes ngx_drizzle [https://github.com/chaoslawful/drizzle-nginx-module/downloads v0.1.1] released on 17 September 2011.
 
 = Synopsis =
 
@@ -610,6 +610,16 @@ Because a single nginx server (by default, <code>localhost:1984</code>) is used 
 * add the <code>min</code> option to the "drizzle_server" directive so that the connection pool will automatically create that number of connections and put them into the pool.
 * add Unix domain socket support in the <code>drizzle_server</code> directive.
 * make the [[#drizzle_query|drizzle_query]] directive reject variables that have not been processed by a [[#drizzle_process|drizzle_process]] directive. This will pretect us from SQL injections. There will also be an option ("strict=no") to disable such checks.
+
+= Changes =
+
+== v0.1.1 ==
+* fixed segmentation faults on 32-bit systems. thanks @魏世江 and @stefanli for reporting this issue.
+* documented the [[#$drizzle_thread_id|$drizzle_thread_id]] variable.
+* added lots of debug outputs (enabled by the <code>--with-debug</code> option while building Nginx or OpenResty), inspired by github issue #10.
+* fixed issues regarding defining global variables in C header files: we should have defined <code>rds_rough_col_type_t</code> as a type rather than a global variable. thanks @姜大炮.
+* documented the python -> python3 pitfall while building libdrizzle 1.0 on at least ArchLinux.
+* fixed the automatic libdrizzle searching algorithm in the config file: now we should look under <code>libdrizzle-1.0/</code> instead. thanks 支家乐 (Calio) for reporting this issue.
 
 = Authors =
 
