updated docs to reflect recent changes.

--- a/doc/HttpDrizzleModule.wiki
+++ b/doc/HttpDrizzleModule.wiki
@@ -10,7 +10,7 @@ This module is already production ready and is powering [http://lz.taobao.com th
 
 = Version =
 
-This document describes ngx_drizzle [https://github.com/chaoslawful/drizzle-nginx-module/tags v0.1.2] released on 2 August 2012.
+This document describes ngx_drizzle [https://github.com/chaoslawful/drizzle-nginx-module/tags v0.1.3] released on 16 August 2012.
 
 = Synopsis =
 
@@ -569,7 +569,8 @@ This module has been tested on Linux and Mac OS X. Reports on other POSIX-compli
 
 The following versions of Nginx should work with this module:
 
-* 1.2.x (last tested: 1.2.1)
+* 1.3.x (last tested: 1.3.4)
+* 1.2.x (last tested: 1.2.3)
 * 1.1.x (last tested: 1.1.5)
 * 1.0.x (last tested: 1.0.8)
 * 0.8.x (last tested: 0.8.55)
@@ -579,12 +580,22 @@ Earlier versions of Nginx like <code>0.6.x</code> and <code>0.5.x</code> will ''
 
 If you find that any particular version of Nginx above <code>0.7.44</code> does not work with this module, please consider reporting a bug.
 
+= Community =
+
+== English Mailing List ==
+
+The [https://groups.google.com/group/openresty-en openresty-en] mailing list is for English speakers.
+
+== Chinese Mailing List ==
+
+The [https://groups.google.com/group/openresty openresty] mailing list is for Chinese speakers.
+
 = Report Bugs =
 
-Although a lot of effort has been put into testing and code tuning, there must be some serious bugs lurking somewhere in this module. So whenever you are bitten by any quirks, please don't hesitate to
+Please submit bug reports, wishlists, or patches by
 
-# create a ticket on the [http://github.com/chaoslawful/drizzle-nginx-module/issues issue tracking interface] provided by GitHub,
-# or send a bug report or even patches to the [http://mailman.nginx.org/mailman/listinfo/nginx nginx mailing list].
+# creating a ticket on the [http://github.com/chaoslawful/drizzle-nginx-module/issues issue tracking interface] provided by GitHub,
+# or sending an email to the [[#Community|OpenResty community]].
 
 = Source Repository =
 
@@ -617,18 +628,14 @@ Because a single nginx server (by default, <code>localhost:1984</code>) is used 
 
 = Changes =
 
-== v0.1.1 ==
-* fixed segmentation faults on 32-bit systems. thanks @魏世江 and @stefanli for reporting this issue.
-* documented the [[#$drizzle_thread_id|$drizzle_thread_id]] variable.
-* added lots of debug outputs (enabled by the <code>--with-debug</code> option while building Nginx or OpenResty), inspired by github issue #10.
-* fixed issues regarding defining global variables in C header files: we should have defined <code>rds_rough_col_type_t</code> as a type rather than a global variable. thanks @姜大炮.
-* documented the python -> python3 pitfall while building libdrizzle 1.0 on at least ArchLinux.
-* fixed the automatic libdrizzle searching algorithm in the config file: now we should look under <code>libdrizzle-1.0/</code> instead. thanks 支家乐 (Calio) for reporting this issue.
+The changes of every release of this module can be obtained from the ngx_openresty bundle's change logs:
+
+http://openresty.org/#Changes
 
 = Authors =
 
 * chaoslawful (王晓哲) <chaoslawful at gmail dot com>
-* Zhang "agentzh" Yichun (章亦春) <agentzh at gmail dot com>
+* Yichun "agentzh" Zhang (章亦春) <agentzh at gmail dot com>
 * Piotr Sikora <piotr.sikora at frickle dot com>
 
 = Copyright & License =
@@ -637,7 +644,7 @@ This module is licenced under the BSD license.
 
 Copyright (C) 2009-2012, by Xiaozhe Wang (chaoslawful) <chaoslawful@gmail.com>.
 
-Copyright (C) 2009-2012, by Zhang "agentzh" Yichun (章亦春) <agentzh@gmail.com>.
+Copyright (C) 2009-2012, by Yichun "agentzh" Zhang (章亦春) <agentzh@gmail.com>.
 
 Copyright (C) 2010-2012, by FRiCKLE Piotr Sikora <info@frickle.com>.
 
