--- a/README
+++ b/README
@@ -10,9 +10,9 @@ Status
     LineZing site (<http://lz.taobao.com>).
 
 Version
-    This document describes ngx_drizzle v0.1.2
+    This document describes ngx_drizzle v0.1.3
     (<https://github.com/chaoslawful/drizzle-nginx-module/tags>) released on
-    2 August 2012.
+    16 August 2012.
 
 Synopsis
         http {
@@ -592,7 +592,9 @@ Compatibility
 
     The following versions of Nginx should work with this module:
 
-    *   1.2.x (last tested: 1.2.1)
+    *   1.3.x (last tested: 1.3.4)
+
+    *   1.2.x (last tested: 1.2.3)
 
     *   1.1.x (last tested: 1.1.5)
 
@@ -607,17 +609,23 @@ Compatibility
     If you find that any particular version of Nginx above 0.7.44 does not
     work with this module, please consider reporting a bug.
 
-Report Bugs
-    Although a lot of effort has been put into testing and code tuning,
-    there must be some serious bugs lurking somewhere in this module. So
-    whenever you are bitten by any quirks, please don't hesitate to
+Community
+  English Mailing List
+    The openresty-en (<https://groups.google.com/group/openresty-en>)
+    mailing list is for English speakers.
 
-    1.  create a ticket on the issue tracking interface
+  Chinese Mailing List
+    The openresty (<https://groups.google.com/group/openresty>) mailing list
+    is for Chinese speakers.
+
+Report Bugs
+    Please submit bug reports, wishlists, or patches by
+
+    1.  creating a ticket on the issue tracking interface
         (<http://github.com/chaoslawful/drizzle-nginx-module/issues>)
         provided by GitHub,
 
-    2.  or send a bug report or even patches to the nginx mailing list
-        (<http://mailman.nginx.org/mailman/listinfo/nginx>).
+    2.  or sending an email to the OpenResty community.
 
 Source Repository
     Available on github at chaoslawful/drizzle-nginx-module
@@ -675,30 +683,15 @@ TODO
         disable such checks.
 
 Changes
-  v0.1.1
-    *   fixed segmentation faults on 32-bit systems. thanks @魏世江 and
-        @stefanli for reporting this issue.
+    The changes of every release of this module can be obtained from the
+    ngx_openresty bundle's change logs:
 
-    *   documented the $drizzle_thread_id variable.
-
-    *   added lots of debug outputs (enabled by the "--with-debug" option
-        while building Nginx or OpenResty), inspired by github issue #10.
-
-    *   fixed issues regarding defining global variables in C header files:
-        we should have defined "rds_rough_col_type_t" as a type rather than
-        a global variable. thanks @姜大炮.
-
-    *   documented the python -> python3 pitfall while building libdrizzle
-        1.0 on at least ArchLinux.
-
-    *   fixed the automatic libdrizzle searching algorithm in the config
-        file: now we should look under "libdrizzle-1.0/" instead. thanks 支家乐
-        (Calio) for reporting this issue.
+    http://openresty.org/#Changes
 
 Authors
     *   chaoslawful (王晓哲) <chaoslawful at gmail dot com>
 
-    *   Zhang "agentzh" Yichun (章亦春) <agentzh at gmail dot com>
+    *   Yichun "agentzh" Zhang (章亦春) <agentzh at gmail dot com>
 
     *   Piotr Sikora <piotr.sikora at frickle dot com>
 
@@ -708,7 +701,7 @@ Copyright & License
     Copyright (C) 2009-2012, by Xiaozhe Wang (chaoslawful)
     <chaoslawful@gmail.com>.
 
-    Copyright (C) 2009-2012, by Zhang "agentzh" Yichun (章亦春)
+    Copyright (C) 2009-2012, by Yichun "agentzh" Zhang (章亦春)
     <agentzh@gmail.com>.
 
     Copyright (C) 2010-2012, by FRiCKLE Piotr Sikora <info@frickle.com>.
