--- a/README
+++ b/README
@@ -372,7 +372,7 @@ Variables
 
         location /main {
             content_by_lua '
-                local res = ngx.location.catpure("/query")
+                local res = ngx.location.capture("/query")
                 if res.status ~= ngx.HTTP_OK then
                     local tid = res.header["X-Mysql-Tid"]
                     if tid and tid ~= "" then
@@ -566,12 +566,12 @@ Installation
         (<http://github.com/agentzh/drizzle-nginx-module/tags>).
 
     *   Grab the nginx source code from nginx.org (<http://nginx.org/>), for
-        example, the version 1.2.3 (see nginx compatibility), and then build
+        example, the version 1.2.4 (see nginx compatibility), and then build
         the source with this module:
 
-            wget 'http://nginx.org/download/nginx-1.2.3.tar.gz'
-            tar -xzvf nginx-1.2.3.tar.gz
-            cd nginx-1.2.3/
+            wget 'http://nginx.org/download/nginx-1.2.4.tar.gz'
+            tar -xzvf nginx-1.2.4.tar.gz
+            cd nginx-1.2.4/
 
             # if you have installed libdrizzle to the prefix /opt/drizzle, then
             # specify the following environments:
@@ -597,9 +597,9 @@ Compatibility
 
     The following versions of Nginx should work with this module:
 
-    *   1.3.x (last tested: 1.3.4)
+    *   1.3.x (last tested: 1.3.7)
 
-    *   1.2.x (last tested: 1.2.3)
+    *   1.2.x (last tested: 1.2.4)
 
     *   1.1.x (last tested: 1.1.5)
 
