--- a/README
+++ b/README
@@ -10,9 +10,9 @@ Status
     LineZing site (<http://lz.taobao.com>).
 
 Version
-    This document describes ngx_drizzle v0.1.4
+    This document describes ngx_drizzle v0.1.5
     (<https://github.com/chaoslawful/drizzle-nginx-module/tags>) released on
-    17 August 2012.
+    27 March 2013.
 
 Synopsis
         http {
@@ -566,12 +566,12 @@ Installation
         (<http://github.com/agentzh/drizzle-nginx-module/tags>).
 
     *   Grab the nginx source code from nginx.org (<http://nginx.org/>), for
-        example, the version 1.2.4 (see nginx compatibility), and then build
+        example, the version 1.2.7 (see nginx compatibility), and then build
         the source with this module:
 
-            wget 'http://nginx.org/download/nginx-1.2.4.tar.gz'
-            tar -xzvf nginx-1.2.4.tar.gz
-            cd nginx-1.2.4/
+            wget 'http://nginx.org/download/nginx-1.2.7.tar.gz'
+            tar -xzvf nginx-1.2.7.tar.gz
+            cd nginx-1.2.7/
 
             # if you have installed libdrizzle to the prefix /opt/drizzle, then
             # specify the following environments:
@@ -599,7 +599,7 @@ Compatibility
 
     *   1.3.x (last tested: 1.3.7)
 
-    *   1.2.x (last tested: 1.2.4)
+    *   1.2.x (last tested: 1.2.7)
 
     *   1.1.x (last tested: 1.1.5)
 
@@ -696,20 +696,22 @@ Changes
 Authors
     *   chaoslawful (王晓哲) <chaoslawful at gmail dot com>
 
-    *   Yichun "agentzh" Zhang (章亦春) <agentzh at gmail dot com>
+    *   Yichun "agentzh" Zhang (章亦春) <agentzh at gmail dot com>, CloudFlare
+        Inc.
 
-    *   Piotr Sikora <piotr.sikora at frickle dot com>
+    *   Piotr Sikora <piotr.sikora at frickle dot com>, CloudFlare Inc.
 
 Copyright & License
     This module is licenced under the BSD license.
 
-    Copyright (C) 2009-2012, by Xiaozhe Wang (chaoslawful)
+    Copyright (C) 2009-2013, by Xiaozhe Wang (chaoslawful)
     <chaoslawful@gmail.com>.
 
-    Copyright (C) 2009-2012, by Yichun "agentzh" Zhang (章亦春)
-    <agentzh@gmail.com>.
+    Copyright (C) 2009-2013, by Yichun "agentzh" Zhang (章亦春)
+    <agentzh@gmail.com>, CloudFlare Inc.
 
-    Copyright (C) 2010-2012, by FRiCKLE Piotr Sikora <info@frickle.com>.
+    Copyright (C) 2010-2013, by FRiCKLE Piotr Sikora <info@frickle.com>,
+    CloudFlare Inc.
 
     All rights reserved.
 
