--- a/doc/HttpDrizzleModule.wiki
+++ b/doc/HttpDrizzleModule.wiki
@@ -10,7 +10,7 @@ This module is already production ready and is powering [http://lz.taobao.com th
 
 = Version =
 
-This document describes ngx_drizzle [https://github.com/chaoslawful/drizzle-nginx-module/tags v0.1.4] released on 17 August 2012.
+This document describes ngx_drizzle [https://github.com/chaoslawful/drizzle-nginx-module/tags v0.1.5] released on 27 March 2013.
 
 = Synopsis =
 
@@ -545,11 +545,11 @@ Alternatively, you can compile this module with Nginx core's source by hand:
 </geshi>
 : You can fix this by pointing <code>python</code> to <code>python2</code>.
 * Download the latest version of the release tarball of this module from drizzle-nginx-module [http://github.com/agentzh/drizzle-nginx-module/tags file list].
-* Grab the nginx source code from [http://nginx.org/ nginx.org], for example, the version 1.2.4 (see [[#Compatibility|nginx compatibility]]), and then build the source with this module:
+* Grab the nginx source code from [http://nginx.org/ nginx.org], for example, the version 1.2.7 (see [[#Compatibility|nginx compatibility]]), and then build the source with this module:
 <geshi lang="bash">
-        wget 'http://nginx.org/download/nginx-1.2.4.tar.gz'
-        tar -xzvf nginx-1.2.4.tar.gz
-        cd nginx-1.2.4/
+        wget 'http://nginx.org/download/nginx-1.2.7.tar.gz'
+        tar -xzvf nginx-1.2.7.tar.gz
+        cd nginx-1.2.7/
       
         # if you have installed libdrizzle to the prefix /opt/drizzle, then
         # specify the following environments:
@@ -575,7 +575,7 @@ This module has been tested on Linux and Mac OS X. Reports on other POSIX-compli
 The following versions of Nginx should work with this module:
 
 * 1.3.x (last tested: 1.3.7)
-* 1.2.x (last tested: 1.2.4)
+* 1.2.x (last tested: 1.2.7)
 * 1.1.x (last tested: 1.1.5)
 * 1.0.x (last tested: 1.0.8)
 * 0.8.x (last tested: 0.8.55)
@@ -640,18 +640,18 @@ http://openresty.org/#Changes
 = Authors =
 
 * chaoslawful (王晓哲) <chaoslawful at gmail dot com>
-* Yichun "agentzh" Zhang (章亦春) <agentzh at gmail dot com>
-* Piotr Sikora <piotr.sikora at frickle dot com>
+* Yichun "agentzh" Zhang (章亦春) <agentzh at gmail dot com>, CloudFlare Inc.
+* Piotr Sikora <piotr.sikora at frickle dot com>, CloudFlare Inc.
 
 = Copyright & License =
 
 This module is licenced under the BSD license.
 
-Copyright (C) 2009-2012, by Xiaozhe Wang (chaoslawful) <chaoslawful@gmail.com>.
+Copyright (C) 2009-2013, by Xiaozhe Wang (chaoslawful) <chaoslawful@gmail.com>.
 
-Copyright (C) 2009-2012, by Yichun "agentzh" Zhang (章亦春) <agentzh@gmail.com>.
+Copyright (C) 2009-2013, by Yichun "agentzh" Zhang (章亦春) <agentzh@gmail.com>, CloudFlare Inc.
 
-Copyright (C) 2010-2012, by FRiCKLE Piotr Sikora <info@frickle.com>.
+Copyright (C) 2010-2013, by FRiCKLE Piotr Sikora <info@frickle.com>, CloudFlare Inc.
 
 All rights reserved.
 
