--- a/README
+++ b/README
@@ -563,15 +563,15 @@ Installation
 
     *   Download the latest version of the release tarball of this module
         from drizzle-nginx-module file list
-        (<http://github.com/agentzh/drizzle-nginx-module/tags>).
+        (<http://github.com/chaoslawful/drizzle-nginx-module/tags>).
 
     *   Grab the nginx source code from nginx.org (<http://nginx.org/>), for
-        example, the version 1.2.7 (see nginx compatibility), and then build
+        example, the version 1.4.1 (see nginx compatibility), and then build
         the source with this module:
 
-            wget 'http://nginx.org/download/nginx-1.2.7.tar.gz'
-            tar -xzvf nginx-1.2.7.tar.gz
-            cd nginx-1.2.7/
+            wget 'http://nginx.org/download/nginx-1.4.1.tar.gz'
+            tar -xzvf nginx-1.4.1.tar.gz
+            cd nginx-1.4.1/
 
             # if you have installed libdrizzle to the prefix /opt/drizzle, then
             # specify the following environments:
@@ -596,6 +596,8 @@ Compatibility
     POSIX-compliant systems will be highly appreciated.
 
     The following versions of Nginx should work with this module:
+
+    *   1.4.x (last tested: 1.4.1)
 
     *   1.3.x (last tested: 1.3.7)
 
