--- a/doc/HttpDrizzleModule.wiki
+++ b/doc/HttpDrizzleModule.wiki
@@ -544,12 +544,12 @@ Alternatively, you can compile this module with Nginx core's source by hand:
         make: *** [.plugin.scan] Error 1
 </geshi>
 : You can fix this by pointing <code>python</code> to <code>python2</code>.
-* Download the latest version of the release tarball of this module from drizzle-nginx-module [http://github.com/agentzh/drizzle-nginx-module/tags file list].
-* Grab the nginx source code from [http://nginx.org/ nginx.org], for example, the version 1.2.7 (see [[#Compatibility|nginx compatibility]]), and then build the source with this module:
+* Download the latest version of the release tarball of this module from drizzle-nginx-module [http://github.com/chaoslawful/drizzle-nginx-module/tags file list].
+* Grab the nginx source code from [http://nginx.org/ nginx.org], for example, the version 1.4.1 (see [[#Compatibility|nginx compatibility]]), and then build the source with this module:
 <geshi lang="bash">
-        wget 'http://nginx.org/download/nginx-1.2.7.tar.gz'
-        tar -xzvf nginx-1.2.7.tar.gz
-        cd nginx-1.2.7/
+        wget 'http://nginx.org/download/nginx-1.4.1.tar.gz'
+        tar -xzvf nginx-1.4.1.tar.gz
+        cd nginx-1.4.1/
       
         # if you have installed libdrizzle to the prefix /opt/drizzle, then
         # specify the following environments:
@@ -574,6 +574,7 @@ This module has been tested on Linux and Mac OS X. Reports on other POSIX-compli
 
 The following versions of Nginx should work with this module:
 
+* 1.4.x (last tested: 1.4.1)
 * 1.3.x (last tested: 1.3.7)
 * 1.2.x (last tested: 1.2.7)
 * 1.1.x (last tested: 1.1.5)
