--- a/doc/HttpDrizzleModule.wiki
+++ b/doc/HttpDrizzleModule.wiki
@@ -545,11 +545,11 @@ Alternatively, you can compile this module with Nginx core's source by hand:
 </geshi>
 : You can fix this by pointing <code>python</code> to <code>python2</code>.
 * Download the latest version of the release tarball of this module from drizzle-nginx-module [http://github.com/openresty/drizzle-nginx-module/tags file list].
-* Grab the nginx source code from [http://nginx.org/ nginx.org], for example, the version 1.5.8 (see [[#Compatibility|nginx compatibility]]), and then build the source with this module:
+* Grab the nginx source code from [http://nginx.org/ nginx.org], for example, the version 1.7.4 (see [[#Compatibility|nginx compatibility]]), and then build the source with this module:
 <geshi lang="bash">
-        wget 'http://nginx.org/download/nginx-1.5.8.tar.gz'
-        tar -xzvf nginx-1.5.8.tar.gz
-        cd nginx-1.5.8/
+        wget 'http://nginx.org/download/nginx-1.7.4.tar.gz'
+        tar -xzvf nginx-1.7.4.tar.gz
+        cd nginx-1.7.4/
       
         # if you have installed libdrizzle to the prefix /opt/drizzle, then
         # specify the following environments:
@@ -574,6 +574,8 @@ This module has been tested on Linux and Mac OS X. Reports on other POSIX-compli
 
 The following versions of Nginx should work with this module:
 
+* 1.7.x (last tested: 1.7.4)
+* 1.6.x
 * 1.5.x (last tested: 1.5.8)
 * 1.4.x (last tested: 1.4.4)
 * 1.3.x (last tested: 1.3.7)
